# unxt

./: .copier-answers.yml  .czrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  .taplo.toml  .tmp_labeler_log.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  conftest.py  mkdocs.yml  noxfile.py  pyproject.toml
.claude/plans/: 2026-07-02-quantity-parametric-rename.md
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  labeler.yml  labels.yml  release.yml
.github/actions/dispatch-package-cd/: action.yml
.github/actions/find-package-tag/: action.yml
.github/workflows/: cd-pr-unxt-api.yml  cd-pr-unxt-hypothesis.yml  cd-pr-unxt.yml  cd-pr-unxts-api.yml  cd-pr-unxts-hypothesis.yml  cd-pr-unxts-interop-gala.yml  cd-pr-unxts-interop-matplotlib.yml  cd-pr-unxts-interop-xarray.yml  cd-pr-unxts-linalg.yml  cd-pr-unxts-parametric.yml  cd-pr-unxts-xarray.yml  cd-publish-unxt-api.yml  cd-publish-unxt-hypothesis.yml  cd-publish-unxt.yml  cd-publish-unxts-api.yml  cd-publish-unxts-hypothesis.yml  cd-publish-unxts-interop-gala.yml  cd-publish-unxts-interop-matplotlib.yml  cd-publish-unxts-interop-xarray.yml  cd-publish-unxts-linalg.yml  cd-publish-unxts-parametric.yml  cd-publish-unxts-xarray.yml  cd-unxt-api.yml  cd-unxt-hypothesis.yml  cd-unxt-xarray.yml  cd-unxt.yml  cd-unxts-api.yml  cd-unxts-hypothesis.yml  cd-unxts-interop-gala.yml  cd-unxts-interop-matplotlib.yml  cd-unxts-interop-xarray.yml  cd-unxts-linalg.yml  cd-unxts-parametric.yml  cd-unxts-xarray.yml  cd.yml  ci.yml  collect-pr-label-data.yml  create-package-tags.yml  labeler.yml  ossar.yml  (+3 more)
docs/: Makefile  conf.py  contributing.md  conventions.md  dev.md  everything.md  getting_started.md  glossary.md  index.md  interop.md  migration.md  sharp_bits.md
docs/_static/: .README.md  custom_css.css  custom_toc.css  equinox.inv  generate_equinox_inv.py  generate_jaxtyping_inv.py  generate_quax_blocks_inv.py  jaxtyping.inv  quax_blocks.inv  toggle_toc.js
docs/api/: dims.md  experimental.md  index.md  quantities.md  quantity.md  top.md  units.md  unitsystems.md
docs/guides/: configuration.md  dimensions.md  natural-units.md  perf.md  quantity.md  sharp-bits.md  type-checking.md  units_and_systems.md
docs/interop/: astropy.md  dataclassish.md  gala.md  matplotlib.md
docs/tutorials/: coming_from_astropy.md  diffrax.md  index.md
paper/: joss-7771.preprint.tex  paper.bib  paper.md
scripts/: QUICK_RELEASE.md  get_version.py  validate_tag.py
src/jax_quantity/: __init__.py  _base.py  _core.py  _fast.py  _register_dispatches.py  _register_primitives.py  array_namespace.py
src/unxt/: __init__.py  _base.py  _core.py  _distance.py  _fast.py  _optional_deps.py  _register_dispatches.py  _register_primitives.py  _typing.py  _utils.py  config.py  dims.py  experimental.py  quantity.py  quantity.pyi  setup_package.py  units.py  unitsystems.py
src/unxt/_interop/: __init__.py  optional_deps.py
src/unxt/_interop/unxt_interop_astropy/: __init__.py  custom_types.py  dimensions.py  quantity.py  units.py  unitsystems.py
src/unxt/_interop/unxt_interop_gala/: __init__.py  unitsystems.py
src/unxt/_interop/unxt_interop_mpl/: __init__.py
src/unxt/_quantity/: __init__.py  _compat.py  _distance.py  _register_primitives.py  base.py  base_parametric.py  compat.py  core.py  distance.py  fast.py  functional.py  register_dispatches.py  register_primitives.py  utils.py
src/unxt/_src/: __init__.py  config.py  dimensions.py  experimental.py  typing_ext.py  units.py  utils.py
src/unxt/_src/dimensions/: __init__.py  api.py  core.py
src/unxt/_src/quantity/: __init__.py  angle.py  api.py  base.py  base_angle.py  base_parametric.py  compat.py  core.py  distance.py  fast.py  flag.py  functional.py  mixins.py  parametric.py  quantity.py  register_api.py  register_compare.py  register_conversions.py  register_dispatches.py  register_primitives.py  register_ufuncs.py  static_quantity.py  unchecked.py  value.py
src/unxt/_src/units/: __init__.py  api.py  core.py  register_dispatches.py
src/unxt/_src/unitsystems/: __init__.py  base.py  builtin.py  builtin_dimensions.py  compare.py  core.py  flags.py  realizations.py  utils.py
src/unxt/_unxt/: dimensions.py  experimental.py  units.py  utils.py
src/unxt/_unxt/dimensions/: __init__.py
src/unxt/_unxt/quantity/: __init__.py  base.py  base_parametric.py  compat.py  core.py  distance.py  fast.py  functional.py  register_dispatches.py  register_primitives.py
src/unxt/_unxt_interop_astropy/: __init__.py  quantity.py
src/unxt/_unxt_interop_gala/: unitsystems.py
src/unxt/_utils/: __init__.py
src/unxt/unitsystems/: __init__.py  _base.py  _builtin.py  _compare.py  _compat.py  _core.py  _realizations.py  _utils.py
tests/: test_array_api.py  test_array_api_jax_compat.py  test_package.py  test_plum.py  test_quantity.py  test_quaxed.py
tests/benchmark/: test_dimensions.py  test_dims.py  test_quantity_init.py  test_quaxed.py  test_uconvert_value.py  test_units.py  test_unitsystems.py
tests/integration/: test_plum.py  test_uconvert_value_performance.py
tests/integration/astropy/: test_astropy_interop_quantity.py
tests/integration/equinox/: test_module.py
tests/integration/matplotlib/: test_interop_mpl.py
tests/integration/quax/: test_lora.py
tests/integration/quaxed/: test_array_api.py  test_lax.py  test_numpy.py
tests/quaxed/: test_array_api.py
tests/typing/: test_construction.py
tests/unit/: test_astropy_interop_quantity.py  test_bitwise_dimensionless.py  test_config.py  test_conftest.py  test_deprecated.py  test_deprecations.py  test_dims.py  test_experimental_where.py  test_get_version_script.py  test_numpy_ufunc.py  test_optional_deps.py  test_package.py  test_plum.py  test_quantity.py  test_quantity_equivalence.py  test_quantity_indexing_and_mt.py  test_quantity_interchangeability.py  test_quantity_printing.py  test_quantity_staticvalue_eq.py  test_static_quantity.py  test_static_quantity_reparent.py  test_units.py  test_unitsystems.py  test_validate_tag.py  test_wrap_to.py
(+21 files in other folders)
