[project]
  name = "unxt"
  dynamic = ["version"]
  description = "Quantities in JAX"
  readme = "README.md"
  requires-python = ">=3.11"
  authors = [
    { name = "GalacticDynamics", email = "nstarman@users.noreply.github.com" },
    { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
    { name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com" },
  ]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
  ]
  license.file = "LICENSE"
  dependencies = [
    "astropy>=7.0.0",
    "dataclassish>=0.8.0",
    "equinox>=0.11.8",
    "is-annotated>=1.0",
    "jax>0.4.32",
    "jaxlib>0.4.32",
    "jaxtyping>=0.2.34",
    "optional-dependencies>=0.3.2",
    "plum-dispatch>=2.5.6",
    "quax>=0.0.5",
    "quax-blocks>=0.2",
    "quaxed>=0.8.1",
    "xmmutablemap>=0.1",
    "zeroth>=1.0.0",
]

  [project.optional-dependencies]
    # jax extras
    cpu             = ["jax[cpu]"]
    cuda            = ["jax[cuda]"]
    cuda12          = ["jax[cuda12]"]
    cuda12_local    = ["jax[cuda12_local]"]
    rocm            = ["jax[rocm]"]
    k8s             = ["jax[k8s]"]
    # extra extras
    all             = ["unxt[backend-astropy,interop-gala,interop-mpl]"]
    backend-astropy = ["astropy>=6.0"]
    interop-gala    = ["gala>=1.8"]
    interop-mpl     = ["matplotlib>=3.5"]

  [project.urls]
    "Bug Tracker" = "https://github.com/GalacticDynamics/unxt/issues"
    Changelog     = "https://github.com/GalacticDynamics/unxt/releases"
    Discussions   = "https://github.com/GalacticDynamics/unxt/discussions"
    Homepage      = "https://github.com/GalacticDynamics/unxt"

[build-system]
  requires      = ["hatch-vcs", "hatchling"]
  build-backend = "hatchling.build"

[dependency-groups]
  dev = [
    "ipykernel>=6.29.5",
    "cz-conventional-gitmoji>=0.6.1",
    { include-group = "docs" },
    { include-group = "nox" },
    { include-group = "test-all" },
    "pre-commit>=4.1.0",
]
  docs = [
    "myst-nb>=1.1.2",
    "myst_parser>=0.13",
    "pytz>=2024.2",               # for copyright date
    "sphinx-book-theme==1.1.3",
    "sphinx-prompt>=1.8.0",
    "sphinx-tippy>=0.4.3",
    "sphinx>=7.0",
    "sphinx_autodoc_typehints>=3.0.0",
    "sphinx_copybutton>=0.5.2",
    "sphinx_design>=0.6.1",
    "sphinx_togglebutton>=0.3.2",
    "sphinxext-opengraph>=0.9.1",
    "sphinxext-rediraffe>=0.2.7",
  ]
  nox = ["nox>=2024.10.9"]
  test = [
    "hypothesis[numpy]>=6.112.2",
    "pytest>=8.3.3",
    "pytest-arraydiff>=0.6.1",
    "pytest-benchmark>=5.1",
    "pytest-codspeed>=3.1",
    "pytest-cov>=3",
    "pytest-env>=1.1.5",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "sybil>=8.0.0",
]
  pytest-benchmark-parallel = [
    "pytest-xdist>=3.6.1",
  ]
  test-mpl = ["pytest-mpl>=0.17.0"]
  test-all = [{ include-group = "test" }, { include-group = "test-mpl" }]


[tool.hatch]
  build.hooks.vcs.version-file = "src/unxt/_version.py"
  version.source               = "vcs"


[tool.commitizen]
  name = "cz_gitmoji"


[tool.pytest.ini_options]
  addopts = [
    "--arraydiff",
    "--showlocals",
    "--strict-config",
    "--strict-markers",
    "-p no:doctest",    # using sybil
    "-ra",
  ]
  filterwarnings = [
    "error",
    "ignore:Attribute s is deprecated and will be removed in Python 3\\.14:DeprecationWarning", # from Sybil
    "ignore:ast\\.Str is deprecated and will be removed in Python 3\\.14:DeprecationWarning",   # from Sybil
    # jax
    "ignore:jax\\.core\\.pp_eqn_rules is deprecated:DeprecationWarning",
  ]
  log_cli_level = "INFO"
  minversion = "8.3"
  testpaths = ["docs", "README.md", "src/", "tests/"]
  norecursedirs = ["docs/_build"]
  xfail_strict = true


[tool.pytest_env]
UNXT_ENABLE_RUNTIME_TYPECHECKING = "beartype.beartype"


[tool.coverage]
  report.exclude_also = [
    '\.\.\.',
    'if typing.TYPE_CHECKING:',
    'if TYPE_CHECKING:',
  ]
  run.source          = ["unxt"]
  run.branch          = true

[tool.mypy]
  disallow_incomplete_defs = false
  disallow_untyped_defs    = false
  enable_error_code        = ["ignore-without-code", "redundant-expr", "truthy-bool"]
  files                    = ["src", "tests"]
  python_version           = "3.11"
  strict                   = true
  warn_return_any          = false
  warn_unreachable         = true
  warn_unused_configs      = true

  [[tool.mypy.overrides]]
    disable_error_code       = ["name-defined", "no-redef", "type-arg"]
    disallow_incomplete_defs = true
    disallow_untyped_defs    = true
    module                   = "unxt.*"

  [[tool.mypy.overrides]]
    ignore_missing_imports = true
    module = [
      "astropy.*",
      "equinox.*",
      "hypothesis.*",
      "jax.*",
      "jaxtyping.*",
      "numpy.*",
      "quax.*",
      "quaxed.*",
      "unxt.*",
    ]


[tool.ruff]
  [tool.ruff.lint]
    extend-select = ["ALL"]
    ignore = [
      "A002",    # Argument is shadowing a Python builtin
      "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
      "ARG001",  # Unused function argument  # TODO: resolve
      "COM812",  # <- for ruff.format
      "D103",    # Missing docstring in public function  # TODO: resolve
      "D105",    # Missing docstring in magic method
      "D107",    # Missing docstring in __init__
      "D203",    # 1 blank line required before class docstring
      "D213",    # Multi-line docstring summary should start at the second line
      "ERA001",  # Commented out code
      "F722",    # Syntax error in forward annotation <- jaxtyping
      "F811",    # redefinition of unused '...'  <- plum-dispatch
      "F821",    # undefined name '...'  <- jaxtyping
      "FIX002",  # Line contains TODO
      "ISC001",  # Conflicts with formatter
      "N806",    # Variable in function should be lowercase
      "PD",      # Pandas
      "PLR09",   # Too many <...>
      "PLR2004", # Magic value used in comparison
      "PYI041",  # Use `complex` instead of `int | complex` <- plum is more strict
      "RUF022",  # `__all__` is not sorted
      # "TC003",   # typing-only-standard-library-import
      "TD002",   # Missing author in TODO
      "TD003",   # Missing issue link on the line following this TODO
    ]

    [tool.ruff.lint.per-file-ignores]
      "__init__.py"  = ["F403"]
      "docs/conf.py" = ["A001", "INP001"]
      "noxfile.py"   = ["T20"]
      "tests/**"     = ["ANN", "E731", "S101", "SLF001", "T20"]

    [tool.ruff.lint.flake8-import-conventions.aliases]
      equinox = "eqx"

    [tool.ruff.lint.isort]
      combine-as-imports = true
      extra-standard-library = ["typing_extensions"]
      known-first-party = [
        "dataclassish",
        "is_annotated",
        "optional_dependencies",
        "quaxed",
        "xmmutablemap",
        "zeroth",
      ]
      known-local-folder = ["unxt"]

[tool.ruff.format]
  docstring-code-format = true


[tool.pylint]
  ignore-paths = [".*/_compat.py", ".*/_version.py"]
  messages_control.disable = [
    "cyclic-import",              # TODO: resolve
    "design",
    "fixme",
    "abstract-method",
    "function-redefined",         # plum-dispatch
    "invalid-name",               # handled by ruff
    "line-too-long",
    "missing-function-docstring", # TODO: resolve
    "missing-kwoa",               # plum-dispatch
    "missing-module-docstring",
    "no-value-for-parameter",     # plum-dispatch
    "not-callable",               # handled by mypy
    "property-with-parameters",   # handled by ruff
    "protected-access",           # handled by ruff
    "redefined-builtin",          # handled by ruff
    "too-many-function-args",     # plum-dispatch
    "unexpected-keyword-arg",     # plum-dispatch
    "unused-argument",            # handled by ruff
    "unused-import",              # handled by ruff
    "unused-wildcard-import",     # handled by ruff
    "wildcard-import",            # handled by ruff
    "wrong-import-order",         # handled by ruff
    "wrong-import-position",
  ]
  py-version = "3.11"
  reports.output-format = "colorized"
  similarities.ignore-imports = "yes"

  [tool.pylint."FORMAT"]
  max-module-lines = 2000


[tool.uv]
# Require that `unxt[<jax-extras>]` requirements are resolved in different forks
# so that they cannot conflict with one another.
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" }, { extra = "cuda12" }, { extra = "cuda12_local" },
        { extra = "rocm" }, { extra = "k8s" }
    ]
]
constraint-dependencies = [
  "jax<0.4.36", # TODO: remove when https://github.com/patrick-kidger/quax/pull/37 is merged
]
