[project]
authors = [
  { name = "GalacticDynamics", email = "nstarman@users.noreply.github.com" },
  { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
  { name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "astropy>=7.0.0",
  "dataclassish>=0.8.0",
  "equinox>=0.13.2",
  "is-annotated>=1.0",
  "jax>=0.5.3",
  "jaxlib>=0.5.3",
  "jaxtyping>=0.3.3",
  "optional-dependencies>=0.3.2",
  "plum-dispatch>=2.5.7",
  "quax>=0.2.1",
  "quax-blocks>=0.4.0",
  "quaxed>=0.10.2",
  "unxt-api",
  "wadler-lindig>=0.1.5",
  "xmmutablemap>=0.1",
  "zeroth>=1.0.0",
]
description = "Quantities in JAX"
dynamic = ["version"]
license.file = "LICENSE"
name = "unxt"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
# jax extras
cpu          = ["jax[cpu]>=0.5.3"]
cuda         = ["jax[cuda]>=0.5.3"]
cuda12       = ["jax[cuda12]>=0.5.3"]
cuda12_local = ["jax[cuda12_local]>=0.5.3"]
k8s          = ["jax[k8s]>=0.5.3"]
# extra extras
all             = ["unxt[backend-astropy,interop-gala,interop-mpl]"]
backend-astropy = ["astropy>=6.0"]
interop-gala    = ["gala>=1.8"]
interop-mpl     = ["matplotlib>=3.8"]

[project.urls]
"Bug Tracker" = "https://github.com/GalacticDynamics/unxt/issues"
Changelog     = "https://github.com/GalacticDynamics/unxt/releases"
Discussions   = "https://github.com/GalacticDynamics/unxt/discussions"
Homepage      = "https://github.com/GalacticDynamics/unxt"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatch-vcs", "hatchling"]


[dependency-groups]
build = ["build>=1.3.0"]
dev = [
  "ipykernel>=6.29.5",
  "cz-conventional-gitmoji>=0.6.1",
  { include-group = "build" },
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "nox" },
  { include-group = "test-all" },
]
docs = [
  "myst-nb>=1.1.2",
  "myst_parser>=0.13",
  "pytz>=2024.2",                    # for copyright date
  "sphobjinv>=2.3",
  "sphinx-autobuild>=2024.9.3",
  "sphinx-book-theme==1.1.3",
  "sphinx-prompt>=1.8.0",
  "sphinx-tippy>=0.4.3",
  "sphinx>=7.0",
  "sphinx_autodoc_typehints>=3.0.0",
  "sphinx_copybutton>=0.5.2",
  "sphinx_design>=0.6.1",
  "sphinx_togglebutton>=0.3.2",
  "sphinxext-opengraph>=0.9.1",
  "sphinxext-rediraffe>=0.2.7",
]
lint = ["pre-commit>=4.1.0", "pylint>=3.3.8"]
nox = ["nox>=2024.10.9"]
pytest-benchmark-parallel = ["pytest-xdist>=3.6.1"]
test = [
  "hypothesis[numpy]>=6.138.14",
  "pytest>=8.4.2",
  "pytest-arraydiff>=0.6.1",
  "pytest-benchmark>=5.1.0",
  "pytest-codspeed>=4.2.0",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5",
  "pytest-github-actions-annotate-failures>=0.3.0",
  "sybil[pytest]>=9.2.0",
  "unxt-hypothesis",
]
test-all = [{ include-group = "test" }, { include-group = "test-mpl" }]
test-mpl = ["pytest-mpl>=0.17.0", "matplotlib>=3.8,<3.10"]
workspace = ["unxt-api", "unxt-hypothesis"]


[tool.hatch]
build.hooks.vcs.version-file = "src/unxt/_version.py"
build.hooks.vcs.version-file-template = """\
version: str = {version!r}
version_tuple: tuple[int, int, int] | tuple[int, int, int, str, str]
version_tuple = {version_tuple!r}
"""
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[tool.codespell]
skip = ["uv.lock", "paper/paper.bib"]


[tool.commitizen]
name = "cz_gitmoji"


[tool.coverage]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
  'if TYPE_CHECKING:',
]
run.branch = true
run.source = ["unxt"]


[tool.mypy]
disallow_incomplete_defs = false
disallow_untyped_defs    = false
enable_error_code        = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files                    = ["src", "tests"]
python_version           = "3.11"
strict                   = true
warn_return_any          = false
warn_unreachable         = true
warn_unused_configs      = true

[[tool.mypy.overrides]]
disable_error_code       = ["name-defined", "no-redef", "type-arg"]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
module                   = "unxt.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "astropy.*",
  "equinox.*",
  "hypothesis.*",
  "jax.*",
  "jaxtyping.*",
  "numpy.*",
  "plum.*",
  "quax.*",
  "quaxed.*",
  "unxt.*",
]


[tool.pylint]
ignore-paths = [".*/_compat.py", ".*/_version.py"]
messages_control.disable = [
  "cyclic-import",              # TODO: resolve
  "design",
  "fixme",
  "abstract-method",
  "function-redefined",         # plum-dispatch
  "invalid-name",               # handled by ruff
  "line-too-long",
  "missing-function-docstring", # TODO: resolve
  "missing-kwoa",               # plum-dispatch
  "missing-module-docstring",
  "no-value-for-parameter",     # plum-dispatch
  "not-callable",               # handled by mypy
  "property-with-parameters",   # handled by ruff
  "protected-access",           # handled by ruff
  "redefined-builtin",          # handled by ruff
  "too-many-function-args",     # plum-dispatch
  "unexpected-keyword-arg",     # plum-dispatch
  "unused-argument",            # handled by ruff
  "unused-import",              # handled by ruff
  "unused-wildcard-import",     # handled by ruff
  "wildcard-import",            # handled by ruff
  "wrong-import-order",         # handled by ruff
  "wrong-import-position",
  "W0221",                      # Arguments in function call differ from overridden method
]
py-version = "3.11"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"

[tool.pylint."FORMAT"]
max-module-lines = 2000


[tool.pytest.ini_options]
addopts = [
  "--arraydiff",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
  "-p no:doctest",    # using sybil
  "-ra",
]
filterwarnings = [
  "error",
  "ignore:Attribute s is deprecated and will be removed in Python 3\\.14:DeprecationWarning", # from Sybil
  "ignore:ast\\.Str is deprecated and will be removed in Python 3\\.14:DeprecationWarning",   # from Sybil
  # pytest
  "ignore:The hookimpl.*uses old-style configuration options:pytest.PytestDeprecationWarning",
  # jax
  "ignore:jax\\.core\\.pp_eqn_rules is deprecated:DeprecationWarning",
  "ignore:jax\\.core\\.Primitive is deprecated:DeprecationWarning",
  "ignore:jax\\.interpreters\\.batching\\.NotMapped is deprecated:DeprecationWarning",
  # Additional potential JAX deprecations for older versions
  "ignore:The numpy\\.array_function protocol:DeprecationWarning",
  "ignore:numpy\\.ndarray size changed:RuntimeWarning",
  # matplotlib (using module pattern to avoid import requirement)
  "ignore::DeprecationWarning:matplotlib",
  # numpy (platform-specific longdouble probe warning during import)
  "ignore:Signature .* for <class 'numpy\\.longdouble'> does not match any known type:UserWarning:numpy\\._core\\.getlimits",
  # pillow
  "ignore:'mode' parameter is deprecated and will be removed in Pillow 13 \\(2026-10-15\\):DeprecationWarning",
]
log_level = "INFO"
minversion = "8.3"
norecursedirs = [
  ".*",          # ignores .hypothesis, .git, etc.
  "__pycache__",
  "docs/_build",
]
testpaths = [
  # Main package
  "README.md",
  "docs",
  "src/",
  "tests/",
  # unxt-api
  "packages/unxt-api/README.md",
  "packages/unxt-api/src/",
  "packages/unxt-api/docs/",
  "packages/unxt-api/tests/",
  # unxt-hypothesis
  "packages/unxt-hypothesis/",
]
xfail_strict = true


[tool.pytest_env]
UNXT_ENABLE_RUNTIME_TYPECHECKING = "beartype.beartype"


[tool.repo-review]
ignore = ["PC140"]


[tool.ruff]
[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A002",    # Argument is shadowing a Python builtin
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "ARG001",  # Unused function argument  # TODO: resolve
  "COM812",  # <- for ruff.format
  "D103",    # Missing docstring in public function  # TODO: resolve
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "ERA001",  # Commented out code
  "F722",    # Syntax error in forward annotation <- jaxtyping
  "F811",    # redefinition of unused '...'  <- plum-dispatch
  "F821",    # undefined name '...'  <- jaxtyping
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with formatter
  "N806",    # Variable in function should be lowercase
  "PD",      # Pandas
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "PYI041",  # Use `complex` instead of `int | complex` <- plum is more strict
  "RUF022",  # `__all__` is not sorted
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]

[tool.ruff.lint.per-file-ignores]
"**tests/**"   = ["ANN", "E731", "INP001", "S101", "SLF001", "T20"]
"__init__.py"  = ["F403"]
"docs/conf.py" = ["A001", "INP001"]
"noxfile.py"   = ["T20"]

[tool.ruff.lint.flake8-import-conventions.aliases]
equinox                 = "eqx"
"hypothesis.strategies" = "st"
unxt                    = "u"
unxt_api                = "api"
unxt_hypothesis         = "ust"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = [
  "dataclassish",
  "is_annotated",
  "optional_dependencies",
  "quaxed",
  "xmmutablemap",
  "zeroth",
]
known-local-folder = ["unxt", "unxt_api", "unxt_hypothesis"]

[tool.ruff.format]
docstring-code-format = true


[tool.uv]
# Require that `unxt[<jax-extras>]` requirements are resolved in different forks
# so that they cannot conflict with one another.
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "cuda12" },
    { extra = "cuda12_local" },
    { extra = "rocm" },
    { extra = "k8s" },
  ],
]


[tool.uv.sources]
unxt-api        = { workspace = true }
unxt-hypothesis = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]
